--- a/Market_final_exam/Market_final_exam.csproj
+++ b/Market_final_exam/Market_final_exam.csproj
@@ -123,6 +123,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>register12.xsd</DependentUpon>
     </Compile>
+    <Compile Include="Reply.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Reply.Designer.cs">
+      <DependentUpon>Reply.cs</DependentUpon>
+    </Compile>
     <Compile Include="Worker.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -149,6 +155,9 @@
     </Compile>
     <EmbeddedResource Include="Register.resx">
       <DependentUpon>Register.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reply.resx">
+      <DependentUpon>Reply.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Worker.resx">
       <DependentUpon>Worker.cs</DependentUpon>
