--- a/Market_final_exam/Market_final_exam.csproj
+++ b/Market_final_exam/Market_final_exam.csproj
@@ -67,6 +67,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CreateReview.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CreateReview.Designer.cs">
+      <DependentUpon>CreateReview.cs</DependentUpon>
+    </Compile>
     <Compile Include="Customer.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -143,6 +149,9 @@
     <Compile Include="Worker.Designer.cs">
       <DependentUpon>Worker.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="CreateReview.resx">
+      <DependentUpon>CreateReview.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Customer.resx">
       <DependentUpon>Customer.cs</DependentUpon>
     </EmbeddedResource>
