--- a/Market_final_exam/Market_final_exam.csproj
+++ b/Market_final_exam/Market_final_exam.csproj
@@ -96,11 +96,41 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Chart_customer_Top5.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Chart_customer_Top5.Designer.cs">
+      <DependentUpon>Chart_customer_Top5.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Chart_market_Top5.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Chart_market_Top5.Designer.cs">
+      <DependentUpon>Chart_market_Top5.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Chart_price_Top5.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Chart_price_Top5.Designer.cs">
+      <DependentUpon>Chart_price_Top5.cs</DependentUpon>
+    </Compile>
     <Compile Include="Chart_stock.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Chart_stock.Designer.cs">
       <DependentUpon>Chart_stock.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Chart_total_margin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Chart_total_margin.Designer.cs">
+      <DependentUpon>Chart_total_margin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Chart_total_refund.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Chart_total_refund.Designer.cs">
+      <DependentUpon>Chart_total_refund.cs</DependentUpon>
     </Compile>
     <Compile Include="CreateReview.cs">
       <SubType>Form</SubType>
@@ -184,8 +214,23 @@
     <Compile Include="Worker.Designer.cs">
       <DependentUpon>Worker.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Chart_customer_Top5.resx">
+      <DependentUpon>Chart_customer_Top5.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Chart_market_Top5.resx">
+      <DependentUpon>Chart_market_Top5.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Chart_price_Top5.resx">
+      <DependentUpon>Chart_price_Top5.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Chart_stock.resx">
       <DependentUpon>Chart_stock.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Chart_total_margin.resx">
+      <DependentUpon>Chart_total_margin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Chart_total_refund.resx">
+      <DependentUpon>Chart_total_refund.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CreateReview.resx">
       <DependentUpon>CreateReview.cs</DependentUpon>
